# buckland

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/hooks/: save-conversation.sh
docs/: future-ideas.md
docs/plans/: 2026-04-22-001-feat-buckland-timetracking-plan.md
docs/smoke-tests/: README.md  phase-b-shortcut.md  phase-c-report.md  phase-d-tui.md  phase-e-tray.md
docs/superpowers/plans/: 2026-04-22-buckland-phase-a-cli-core.md  2026-04-22-buckland-phase-b-shortcut.md  2026-04-22-buckland-phase-c-report.md  2026-04-22-buckland-phase-d-tui.md  2026-04-22-buckland-phase-e-tray.md  README.md
docs/superpowers/specs/: 2026-04-22-buckland-design.md
migrations/: 0001_init.sql
resources/: buckland-tray.desktop
src/: clipboard.rs  config.rs  lib.rs  main.rs
src/cli/: args.rs  commands.rs  context.rs  format.rs  mod.rs  resolve.rs
src/cli/commands/: add.rs  archive.rs  delete.rs  done.rs  helpers.rs  list.rs  mod.rs  report.rs  shortcut.rs  start.rs  status.rs  stop.rs  tray.rs
src/domain/: active_snapshot.rs  mod.rs  report.rs  shortcut_story.rs  task.rs  time_entry.rs  timer_ops.rs
src/shortcut/: client.rs  fetcher.rs  id.rs  mod.rs  story.rs
src/storage/: migrate.rs  mod.rs  repo.rs
src/tray/: assets.rs  mod.rs  render.rs  runtime.rs  state.rs
src/tui/: app.rs  chrome.rs  clipboard.rs  keymap.rs  mod.rs  terminal.rs  theme.rs
src/tui/screens/: agenda.rs  edit.rs  help.rs  mod.rs  report.rs  tasks.rs
tests/: cli_add.rs  cli_lifecycle.rs  cli_list.rs  cli_report.rs  cli_report_copy.rs  cli_report_epic.rs  cli_report_json.rs  cli_shortcut_add.rs  cli_shortcut_refresh.rs  cli_smoke.rs  cli_start.rs  cli_start_shortcut.rs  cli_stop_status.rs  cli_tray.rs  migrations.rs  tui_smoke.rs
