[package]
name = "buckland"
version = "0.3.0"
edition = "2021"
rust-version = "1.74"
license = "GPL-3.0-or-later"
description = "TUI-first time tracker for developers who use Shortcut."
repository = "https://github.com/vagnerzampieri/buckland"
categories = ["command-line-utilities"]
keywords = ["tui", "time-tracking", "shortcut", "productivity"]
default-run = "bl"

[lib]
name = "buckland"
path = "src/lib.rs"

[[bin]]
name = "bl"
path = "src/main.rs"

[[bin]]
name = "bl-tray"
path = "src/bin/bl-tray.rs"
required-features = ["tray"]

[features]
default = ["tray"]
tray = []

[dependencies]
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
rusqlite_migration = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockito = "1"
