[package]
name = "buckland"
version = "0.4.0"
edition = "2021"
rust-version = "1.74"
license = "GPL-3.0-or-later"
description = "TUI-first time tracker for developers who use Shortcut."
repository = "https://github.com/vagnerzampieri/buckland"
categories = ["command-line-utilities"]
keywords = ["tui", "time-tracking", "shortcut", "productivity"]
default-run = "bl"

[lib]
name = "buckland"
path = "src/lib.rs"

[[bin]]
name = "bl"
path = "src/main.rs"

[[bin]]
name = "bl-tray"
path = "src/bin/bl-tray.rs"
required-features = ["tray"]

[features]
default = ["tray"]
tray = []

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
rusqlite_migration = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockito = "1"
