[package]
name = "buckland"
version = "0.5.0"
edition = "2021"
rust-version = "1.74"
license = "GPL-3.0-or-later"
description = "TUI-first time tracker for developers who use Shortcut."
repository = "https://github.com/vagnerzampieri/buckland"
categories = ["command-line-utilities"]
keywords = ["tui", "time-tracking", "shortcut", "productivity"]
default-run = "bl"

[lib]
name = "buckland"
path = "src/lib.rs"

[[bin]]
name = "bl"
path = "src/main.rs"

[[bin]]
name = "bl-tray"
path = "src/bin/bl-tray.rs"
required-features = ["tray"]

[features]
default = ["tray"]
tray = ["dep:ksni", "dep:glib", "dep:resvg"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
glib = { version = "0.20", optional = true }
ksni = { version = "0.3", features = ["blocking"], optional = true }
ratatui = "0.29"
resvg = { version = "0.47", default-features = false, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
rusqlite_migration = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
shell-escape = "0.1"
tempfile = "3"
